changes in package json

--- a/package.json
+++ b/package.json
@@ -136,5 +136,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "scripts": {
+    "start": "NODE_OPTIONS=--openssl-legacy-provider node scripts/start.js"
   }
+  
 }
