--- a/package.json
+++ b/package.json
@@ -139,6 +139,10 @@
   },
   "scripts": {
     "start": "NODE_OPTIONS=--openssl-legacy-provider node scripts/start.js"
+  },
+  "scripts": {
+    "build": "node scripts/build.js"
   }
+  
   
 }
