--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
-    "react-dev-utils": "^9.1.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "resolve": "1.10.0",
@@ -68,7 +67,7 @@
     "worker-loader": "^2.0.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -136,13 +135,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider node scripts/start.js"
-  },
-  "scripts": {
-    "build": "node scripts/build.js"
   }
-  
-  
 }
