--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
+    "react-dev-utils": "^9.1.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "resolve": "1.10.0",
@@ -67,7 +68,7 @@
     "worker-loader": "^2.0.0"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider node scripts/start.js",
+    "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -135,5 +136,11 @@
     "presets": [
       "react-app"
     ]
+  },
+  "scripts": {
+    "start": "NODE_OPTIONS=--openssl-legacy-provider node scripts/start.js"
   }
+ 
+  
+  
 }
